[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
]

[tool.setuptools_scm]
# This section must exist for setuptools_scm to work

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.pylint.basic]
variable-rgx = '[a-z][a-z0-9_]+'

[tool.pylint.format]
expected-line-ending-format = "LF"

[tool.pylint.messages_control]
disable = "no-else-return"
enable = "c-extension-no-member"
