[metadata]
name = DoorPi
url = https://github.com/wuestengecko/DoorPi
author = Wüstengecko
author_email = 1579756+Wuestengecko@users.noreply.github.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Free for non-commercial use
    Natural Language :: German
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: Internet Phone
    Topic :: Communications :: Telephony
    Topic :: Home Automation
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Video :: Capture
    Topic :: Security
    Topic :: System :: Hardware
    Topic :: Utilities
license = CC BY-NC 4.0
description = Provide intercom station to the door station via VoIP
long_description = file: README.rst
keywords = intercom, VoIP, doorstation, home automation, IoT
platforms = Embedded Linux

[options]
zip_safe = false
setup_requires = setuptools_scm
install_requires = requests>=2.7.0; toml>=0.10.1
python_requires = >=3.8
use_2to3 = false
#include_package_data =
packages = find:

[options.extras_require]
camera = picamera>=1.10
files_pseudokb = watchdog>=0.8.3
gpio = RPi.GPIO>=0.5.11
piface = pifacecommon>=4.1.2; pifacedigitalio>=3.0.5
rfid = pyserial>=2.7
test = coverage>=5.0
web = aiohttp; aiohttp_jinja2; docutils>=0.14; jinja2>=2.11.0

[options.entry_points]
console_scripts = doorpi = doorpi.__main__

[options.packages.find]
exclude =
    contrib
    docs
    test*

[pycodestyle]
max-line-length=80
