[metadata]
name = DoorPi
url = https://github.com/wuestengecko/DoorPi
author = Wüstengecko
author_email = 1579756+Wuestengecko@users.noreply.github.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Free for non-commercial use
    Natural Language :: German
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: Internet Phone
    Topic :: Communications :: Telephony
    Topic :: Home Automation
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Video :: Capture
    Topic :: Security
    Topic :: System :: Hardware
    Topic :: Utilities
license = CC BY-NC 4.0
description = Provide intercom station to the door station via VoIP
long_description = file: README.rst
keywords = intercom, VoIP, doorstation, home automation, IoT
platforms = Embedded Linux

[options]
zip_safe = false
setup_requires = setuptools_scm
install_requires = requests>=2.7.0; toml>=0.10.1
python_requires = >=3.8
use_2to3 = false
#include_package_data =
packages = find:

[options.extras_require]
camera = picamera>=1.10
files_pseudokb = watchdog>=0.8.3
gpio = RPi.GPIO>=0.5.11
piface = pifacecommon>=4.1.2; pifacedigitalio>=3.0.5
rfid = pyserial>=2.7
test = coverage>=5.0
web = aiohttp; aiohttp_jinja2; docutils>=0.14; jinja2>=2.11.0

[options.entry_points]
console_scripts = doorpi = doorpi.__main__:main

doorpi.actions =
    call = doorpi.actions.call:CallAction
    callf = doorpi.actions.call:CallFromFileAction
    exec = doorpi.actions.subproc:OSExecuteAction
    file_call_value = doorpi.actions.call:CallFromFileAction
    hangup = doorpi.actions.call:HangupAction
    http_request = doorpi.actions.http_request:HTTPRequestAction
    log = doorpi.actions.log:LogAction
    mail = doorpi.actions.mail:MailAction
    mailto = doorpi.actions.mail:MailAction
    os_execute = doorpi.actions.subproc:OSExecuteAction
    out = doorpi.actions.out:instantiate
    sleep = doorpi.actions.control:SleepAction
    snap_picam = doorpi.actions.snapshot:PicamSnapshotAction
    snap_url = doorpi.actions.snapshot:URLSnapshotAction
    statusfile = doorpi.actions.statusfile:StatusfileAction
    symcon_ips3 = doorpi.actions.symcon_ips3:instantiate
    time_tick = doorpi.actions.tick:TickAction
    waitevent = doorpi.actions.control:WaitEventAction

doorpi.keyboards =
    filesystem = doorpi.keyboard.from_filesystem:FilesystemKeyboard
    gpio = doorpi.keyboard.from_gpio:GPIOKeyboard
    piface = doorpi.keyboard.from_piface:PifaceKeyboard
    pn532 = doorpi.keyboard.from_pn532:PN532Keyboard
    rdm6300 = doorpi.keyboard.from_rdm6300:RDM6300Keyboard
    serial = doorpi.keyboard.serial:SeriallyConnectedKeyboard

doorpi.sipphones =
    dummy = doorpi.sipphone.from_dummy:DummyPhone
    pjsua2 = doorpi.sipphone.from_pjsua2.glue:Pjsua2

[options.packages.find]
exclude =
    contrib
    docs
    test*

[pycodestyle]
max-line-length=80
